--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .banner {
+            width: 1000px;
+            height: 300px;
+            background-color: #00b3d4;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 
 <body>
     <h1>合作的项目<span>杨露</span></h1>
+    <div class="banner"></div>
 </body>
 
 </html>
